grammar.js
    nu_script: ($) => seq(optional($.shebang), optional($._block_body_lf)),

    _block_body_lf: ($) =>
      alias(repeat1(seq($.pipeline, $._terminator_lf)), $.block),

    // Inside the block of a subexpression, there is usually only one pipeline.
    // Line feeds are ignored to allow ergonomic multi line command invocations,
    // so if there is more than one, they must be terminated by semicolons.
    //
    // A subexpression must return a value, so it cannot end with a pipeline
    // terminator.
    _block_body_sub: ($) =>
      seq($.pipeline, repeat(seq($._terminator_sub, $.pipeline))),

    pipeline: ($) => $._pipeline_element,

    _pipeline_element: ($) => $._expression,

    subexpression: ($) => seq("(", alias($._block_body_sub, $.block), ")"),

    literal_null: (_) => "null",

    literal_bool: (_) => choice("true", "false"),

    // unlike Rust, leading _ is allowed, but the token must contain at least
    // one digit
    //
    // also, we cannot use standalone rules for individual digits to avoid the
    // repetition because they all have to be parsed as a single token to avoid
    // conflicts, and you cannot use the token() function on a non-terminal rule
    literal_int: ($) =>
      choice(
        _LITERAL_DECIMAL,
        seq(_SIGN, token.immediate(_LITERAL_DECIMAL)),

        // yes, as of this writing, the sign can come *after* the radix prefix
        seq(
          "0x",
          optional(token.immediate(_SIGN)),
          token.immediate(_LITERAL_HEX),
        ),
        seq(
          "0o",
          optional(token.immediate(_SIGN)),
          token.immediate(_LITERAL_OCTAL),
        ),
        seq(
          "0b",
          optional(token.immediate(_SIGN)),
          token.immediate(_LITERAL_BINARY),
        ),
      ),

    // Taken from the Rust reference, since the underlying nu parser just parses
    // Rust floats, except we don't need the suffix parts, and, unlike Rust, in
    // nu, the sign is actually tokenized into the AST's expression for numeric
    // values.
    //
    // FLOAT_LITERAL :
    //   DEC_LITERAL . (not immediately followed by ., _ or an XID_Start character)
    //    | DEC_LITERAL . DEC_LITERAL SUFFIX_NO_E?
    //    | DEC_LITERAL (. DEC_LITERAL)? FLOAT_EXPONENT SUFFIX?
    //
    // FLOAT_EXPONENT :
    //    (e|E) (+|-)? (DEC_DIGIT|_)* DEC_DIGIT (DEC_DIGIT|_)*
    literal_float: ($) => choice($._float_short, $._float_complete),

    _float_complete: (_) =>
      choice(
        seq(
          _SIGN,
          choice(
            token.immediate(/inf|nan/i),

            seq(
              token.immediate(_LITERAL_DECIMAL),
              token.immediate(_FLOAT_EXPONENT),
            ),

            seq(
              token.immediate(_LITERAL_DECIMAL),
              token.immediate("."),
              token.immediate(_LITERAL_DECIMAL),
              optional(token.immediate(_FLOAT_EXPONENT)),
            ),
          ),
        ),
        // must duplicate the rule without the sign instead of a simple optional
        // because if it's missing, then the first token can't be immediate, but
        // if it is, then the next token must be immediate
        choice(
          /inf|nan/i,
          seq(_LITERAL_DECIMAL, token.immediate(_FLOAT_EXPONENT)),
          seq(
            _LITERAL_DECIMAL,
            token.immediate("."),
            token.immediate(_LITERAL_DECIMAL),
            optional(token.immediate(_FLOAT_EXPONENT)),
          ),
        ),
      ),

    _float_short: (_) =>
      choice(
        seq(_SIGN, token.immediate(_LITERAL_DECIMAL), token.immediate(".")),
        seq(_LITERAL_DECIMAL, token.immediate(".")),
      ),

    literal_binary: (_) =>
      choice(
        _binary_rule("0x", _DIGIT_HEX),
        _binary_rule("0o", _DIGIT_OCTAL),
        _binary_rule("0b", _DIGIT_BINARY),
      ),

    literal_date: (_) =>
      token(
        choice(
          /[0-9]+-[0-9]{2}-[0-9]{2}/,
          /[0-9]+-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}:[0-9]{2}(\.[0-9]+)?([Zz]|([-+])([01]\d|2[0-3]):?([0-5]\d)?)?/,
        ),
      ),

    string: ($) =>
      choice(
        $._str_single_quotes,
        $._str_back_ticks,
        $._str_double_quotes,
        $._str_interpolation,
      ),

    _str_single_quotes: ($) => /'[^']*'/,

    _str_back_ticks: ($) => /`[^`]*`/,

    _str_double_quotes: ($) =>
      seq('"', repeat(choice($._str_content, $.escape_sequence)), '"'),

    _str_interpolation: ($) =>
      seq(
        '$"',
        repeat(
          choice(
            $._str_interpolation_content,
            $.escape_sequence,
            $.subexpression,
          ),
        ),
        '"',
      ),

    escape_sequence: ($) =>
      token.immediate(
        seq(
          "\\",
          token.immediate(
            choice(/["'\\\/{}()$^#|~abefnrt]/, /u[{][0-9a-fA-F]+[}]/),
          ),
        ),
      ),

    range: ($) =>
      seq(
        field("from", $._range_element_left),
        optional(
          seq(token.immediate(".."), field("next", $._range_element_left)),
        ),
        field("op", token.immediate(choice("..", "..=", "..<"))),
        field("to", $._range_element_right),
      ),

    // [TODO] or variable
    _range_element_left: ($) =>
      choice(
        $.literal_int,
        // `<num> . ..` is ambiguous, so only allow float syntaxes that don't end with a .
        alias($._float_complete, $.literal_float),
        $.subexpression,
      ),

    _range_element_right: ($) =>
      choice(
        $.literal_int,
        // `.. <num> .` is not ambiguous, so it is allowed
        $.literal_float,
        $.subexpression,
      ),

    /// Controls

    // Standalone Controls

    // ctrl_for: ($) =>
    // ctrl_loop: ($) => seq(KEYWORD().loop, field("body", $.block)),
    // ctrl_error: ($) =>
    // ctrl_while: ($) =>
    //   seq(
    //     KEYWORD().while,
    //     field("condition", $._expression),
    //     field("body", $.block),
    //   ),

    // Nestable Controls

    // ctrl_do: ($) =>

    // ctrl_if: ($) =>

    // ctrl_match: ($) =>

    // match_arm: ($) =>

    // default_arm: ($) =>

    // match_pattern: ($) =>

    // match_guard: ($) => seq(KEYWORD().if, $._expression),

    // ctrl_try: ($) =>

    // ctrl_return: ($) =>

    /// Pipelines

    // pipe_element: ($) =>

    /// Scope Statements

    // stmt_source: ($) =>

    // stmt_register: ($) =>

    // hide_mod: ($) =>

    // hide_env: ($) =>

    // overlay_hide: ($) =>

    // overlay_new: ($) =>

    // overlay_use: ($) =>

    /// Assignment Statement

    // assignment: ($) => {
    //   const opr = [
    //     PUNC().eq,
    //     OPR().assign_add,
    //     OPR().assign_sub,
    //     OPR().assign_mul,
    //     OPR().assign_div,
    //     OPR().assign_append,
    //   ];

    //   return prec.left(
    //     PREC().assignment,
    //     seq(
    //       field("lhs", $.val_variable),
    //       field("opr", choice(...opr)),
    //       field("rhs", $._expression),
    //     ),
    //   );
    // },

    /// Block

    // block: ($) =>
    //   seq(BRACK().open_brace, optional($._block_body), BRACK().close_brace),

    // the where command has a unique argument pattern that breaks the
    // general command parsing, so we handle it separately
    // where_command: ($) => seq("where", $._where_predicate),

    // _where_predicate: ($) =>

    /// Expressions

    // val_range: ($) => {

    /// Simple Expressions

    // value: ($) =>
    //   choice(
    //     $.val_variable,
    //     $.val_nothing,
    //     $.val_bool,
    //     $.val_number,
    //     $.val_duration,
    //     $.val_filesize,
    //     $.val_binary,
    //     $.val_string,
    //     $.val_interpolated,
    //     $.val_date,
    //     $.val_list,
    //     $.val_record,
    //     $.val_table,
    //     $.val_closure,
    //   ),

    /// Literals
    // val_variable: ($) => choice($._var, seq($._var, $.cell_path)),

    // _var: ($) =>
    //   seq(
    //     PUNC().dollar,
    //     field("name", choice("nu", "in", "env", "nothing", $.identifier)),
    //   ),

    // val_duration: ($) =>

    // val_filesize: ($) =>
    // seq(field("value", $.val_number), field("unit", FILESIZE_UNIT())),

    /// Collections

    // val_list: ($) =>

    // val_record: ($) =>
    //   seq(
    //     BRACK().open_brace,
    //     repeat(field("entry", $.record_entry)),
    //     BRACK().close_brace,
    //   ),

    // record_entry: ($) =>

    // val_closure: ($) =>

    /// CellPaths

    // cell_path: ($) => prec.right(1, seq($.path, repeat($.path))),

    // path: ($) => {
    //   const quoted = choice(
    //     $._str_double_quotes,
    //     $._str_single_quotes,
    //     $._str_back_ticks,
    //   );

    //   const path = choice(prec.right(2, token(/[0-9a-zA-Z_]+/)), quoted);

    //   return seq(
    //     PUNC().dot,
    //     choice(
    //       field("raw_path", path),
    //       field("protected_path", seq(path, PUNC().question)),
    //     ),
    //   );
    // },

    /// Commands

    // command: ($) =>
    //   seq(
    //     field("head", seq(optional(PUNC().caret), $.cmd_identifier)),
    //     prec.dynamic(10, repeat(seq(optional("\n"), $._cmd_arg))),
    //   ),

    // _cmd_arg: ($) =>

    // redirection: ($) =>

    // _flag: ($) => prec.right(5, choice($.short_flag, $.long_flag)),

    // short_flag: ($) => token(/-[_\p{XID_Continue}]+/),

    // long_flag: ($) =>
    //   prec.right(
    //     10,
    //     choice("--", seq("--", token.immediate(/[_\p{XID_Continue}]+/))),
    //   ),

    // because this catches almost anything, we want to ensure it is
    // picked as the a last resort after everything else has failed.
    // so we give it a ridiculously low precedence and place it at the
    // very end
    // unquoted: ($) =>
    //   prec.left(
    //     -69,
    //     token(/[^-$\s\n\t\r{}()\[\]"`';][^\s\n\t\r{}()\[\]"`';]+/),
    //   ),

    /// Identifiers

    // from combination of parser.rs::is_identifier_byte and lex.rs::lex_item {
    line_comment: (_) => /#.*\n/,
  },
});
