corpus/expr/comments.nu
=====
line_comment
=====

# this is a comment

# [TODO] figure out how to combine multiple successive comments into one node
# this is a comment
# on more than one line

-----

(nu_script
  (pipeline
    (line_comment)
    (line_comment)
    (line_comment)
    (line_comment)
  )
)
